fixed compatibility problems